[package]
name = "token-vesting-factory"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
token-vesting-manager = { path = "../token_vesting_manager" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
token-vesting-manager = { path = "../token_vesting_manager" }

